Fix low contrast of links inside the styled-topic directive
Fixes #102

--- a/theme/aplus/static/default.css
+++ b/theme/aplus/static/default.css
@@ -188,11 +188,6 @@ div.topic {
   background-color: #ddf1fb;
 }
 
-div.topic a {
-  color: #33a1ff;
-  font-weight: 400;
-}
-
 p.topic-title {
   font-size: 1.1em;
   font-weight: bold;
